--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ JuliaLocalPreferences.toml
 
 Presentations/*
 Results/*
+
+# Jupyter notebook cleaning
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
