Added Emacs Ignores

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,14 @@ Results/*
 # Jupyter notebook cleaning
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
+
+
+# Emacs generated files
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
